--- a/tools/firmware-utils/Makefile
+++ b/tools/firmware-utils/Makefile
@@ -10,10 +10,10 @@ PKG_NAME:=firmware-utils
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL=$(PROJECT_GIT)/project/firmware-utils.git
-PKG_SOURCE_DATE:=2021-10-30
-PKG_SOURCE_VERSION:=70737600d9385486df5c1970b4ab41ccb17006fa
-PKG_MIRROR_HASH:=a2c64e34827992c0f0c71974aa0b66e0a2aafb38a838649500ecd78095098d4c
+PKG_SOURCE_URL=https://github.com/daebo01/openwrt-firmware-utils.git
+PKG_SOURCE_DATE:=2021-11-29
+PKG_SOURCE_VERSION:=7e8f845438de4b5a637c57dac3ec3502862cb991
+PKG_MIRROR_HASH:=skip
 
 include $(INCLUDE_DIR)/host-build.mk
 include $(INCLUDE_DIR)/cmake.mk
